# Anvil

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  README_zh.md  SECURITY.md  config.example.yaml  docker-compose.yml  mkdocs.yml
backend/: .dockerignore  Dockerfile  environment.yml  pyproject.toml  requirements.txt  setup.py
backend/app/: AGENTS.md  README.md  __init__.py  cli.py  contract_generation.py  contracts.py  doctor.py  runtime_deps.py  smoke.py
backend/app/gateway/: __init__.py  app.py  deps.py  main.py  (+3 more)
backend/tests/: README.md  conformance_helpers.py  conftest.py  fake_chat_provider.py  fake_models.py  packaging_helpers.py  test_approval_sandbox_conformance.py  test_browser_tools_service.py  test_build_release_docs.py  test_capability_bundle_service.py  test_capability_visibility_runtime.py  test_checkpointers.py  test_clarification_runtime.py  test_cli.py  test_config_loader.py  test_config_service.py  test_context_files.py  test_contract_scripts.py  test_docs_release_consistency.py  test_doctor_smoke.py  test_embedded_client.py  test_export_evaluation_report_script.py  test_extensions_service.py  test_file_patcher.py  test_file_readers.py  test_gateway_basic_config.py  test_gateway_deps.py  test_gateway_hcms_memory_surfaces.py  test_gateway_mcp_services.py  test_gateway_memory_platform.py  test_gateway_memory_semantic_layers.py  test_gateway_memory_vnext_surfaces.py  test_gateway_models.py  test_gateway_models_skills_memory_extensions.py  test_gateway_processes.py  test_gateway_release_surfaces.py  test_gateway_runs.py  test_gateway_runs_stream.py  test_gateway_scheduled_tasks.py  test_gateway_self_upgrade.py  (+73 more)
(+296 files in other folders)
