[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anvil-backend"
version = "0.1.0"
description = "Backend harness contracts for Anvil"
requires-python = ">=3.12"
dependencies = [
  "PyYAML>=6,<7",
  "pydantic>=2,<3",
  "requests>=2,<3",
  "httpx>=0.28,<1",
  "langchain==1.2.15",
  "langchain-core==1.3.2",
  "langchain-mcp-adapters>=0.1.0,<1",
  "langgraph==1.1.9",
  "langgraph-prebuilt==1.1.0",
  "langgraph-sdk>=0.3,<0.4",
  "langchain-openai==1.1.1",
  "langchain-anthropic==1.4.0",
  "fastapi>=0.128,<1",
  "uvicorn>=0.40,<1",
  "python-multipart>=0.0.20,<1",
  "markitdown[all,xlsx]>=0.1.5b1,<1",
  "python-docx>=1.1,<2",
  "python-pptx>=1.0,<2",
  "openpyxl>=3.1,<4",
  "pymupdf>=1.27,<2",
  "pymupdf4llm>=0.0.17,<1",
  "pytesseract>=0.3,<1",
  "Pillow>=10,<12",
  "PyPDF2>=3,<4",
  "prompt_toolkit>=3.0,<4",
]

[project.optional-dependencies]
test = [
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
]
observability = [
  "langsmith>=0.3,<1",
]
advanced-documents = [
  "marker-pdf>=1,<2",
]
docs = [
  "mkdocs>=1.6,<2",
  "mkdocs-material>=9,<10",
]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "mkdocs>=1.6,<2",
  "mkdocs-material>=9,<10",
]

[project.scripts]
anvil = "app.cli:main"
anvil-gateway = "app.gateway.main:main"
anvil-shell = "app.shell.main:main"
anvil-doctor = "app.doctor:main"
anvil-smoke = "app.smoke:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -p no:cacheprovider"

[tool.coverage.run]
source = ["app", "packages/harness/anvil"]

[tool.coverage.report]
show_missing = true
skip_empty = true
